--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4rt</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/32x32/female_left.png" type="image/x-icon"> 
+    <link rel="icon" href="/32x32/female_left.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap"> 
 <body>    
     <header>
         <h1>Bryan Blackburn</h1>
@@ -30,6 +31,14 @@
         <img src="/backgrounds/moonPhase.png" id="moonPhase" alt="moonPhase"></img>
         <img src="/cats/hearts.png" id="hearts" alt="hearts"></img> 
         <img src="/32x32/thisfile.png" id="flower" alt="flower"></img>    
+    </div>
+    <div class="cedarville-cursive-text">
+        "Birds migrating,"<br>
+        Ah—where they are headed,<br>
+        must be my homeland"
+    </div>
+    <div class="courier-text">
+        -Murakami 1938.
     </div>
     <canvas id="mycanvas"></canvas>
     <script src="game.js"></script>
