--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src="/32x32/thisfile.png" id="flower" alt="flower"></img>    
     </div>
     <div class="cedarville-cursive-text">
-        "Birds migrating,"<br>
+        "Birds migrating,<br>
         Ah—where they are headed,<br>
         must be my homeland"
     </div>
@@ -45,7 +45,6 @@
 <footer>
     <button id="mute" type="button">Arcade Beta Click to try</button>  
     <p>Phoenix, AZ ©2024 catEngine by Br4m</p>
-    <!-- <p2>Music by Marcelo Fernandez</p2> -->
 </footer>
 </body>
 </html>
