--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="imageContainer">
         <img src="/backgrounds/newback.png" id="stage" alt="stage"></img>
         <img src="32x32/fireSheet.png" id= "fire" alt="fire"></img>
-        <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
+        <img src="/backgrounds/waterAn.png" id="waterA" alt="waterA"></img>
         <img src="/backgrounds/starlong.png" id="starFeild" alt="starFeild"></img>
         <img src="cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
         <img src="/backgrounds/moonPhase.png" id="moonPhase" alt="moonPhase"></img>
