--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="/backgrounds/newback.png" id="stage" alt="stage"></img>
         <img src="32x32/fireSheet.png" id= "fire" alt="fire"></img>
         <img src="/backgrounds/waterAn.png" id="waterA" alt="waterA"></img>
-        <img src="/backgrounds/starlong.png" id="starFeild" alt="starFeild"></img>
+        <img src="/backgrounds/starlong.png" id="starfeild" alt="starfeild"></img>
         <img src="cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
         <img src="/cats/hearts.png" id="hearts" alt="hearts"></img> 
         <img src="/32x32/thisfile.png" id="flower" alt="flower"></img>    
@@ -39,7 +39,7 @@
     <div class="courier-text">
         -Murakami 1938.
     </div>
-    <canvas id="mycanvas"></canvas>
+    <canvas id="myCanvas"></canvas>
     <script src="game.js"></script>
 <footer>
     <button id="mute" type="button">Arcade Beta Click to try</button>  
