--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <img src="/backgrounds/starlong.png" id="starfeild" alt=""></img>
         <img src="/cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
         <img src="/cats/hearts.png" id="hearts" alt="hearts"></img> 
-        <img src="/32x32/thisfile.png" id="flower" alt="flower"></img>    
+        <img src="/32x32/thisfile.png" id="flower" alt="flower"></img>
+        <img src="/362x336/smoke.png" id="smoke" alt="smoke"></img>    
     </div>
     <div class="cedarville-cursive-text">
         "Birds migrating,<br>
