--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <p>Javascript art, portrait art<p>
         <p>Phoenix Arizona</p>
         <p>bramson042@gmail.com</p>
-        <h2>520-286-3225</h2>
+        <p>520-286-3225</p>
     </header>
     <div>
-        <h2 id="feat">Featured Artwork</h2>
+        <!-- <h2 id="feat">Featured Artwork</h2> -->
         <div class="gallery">
             <img id="artwork0" src="/imgArt/Gandalf.jpeg" alt="Artwork 0">
             <img id="artwork1" src="/imgArt/Gandalf.jpeg" alt="Artwork 1">
@@ -44,7 +44,7 @@
     <script src="game.js"></script>
 <footer>
     <button id="mute" type="button">Arcade Beta Click to try</button>  
-    <p>Phoenix, AZ ©2024 catEngine by Br4m</p>
+    <p>Phoenix, AZ ©2024 Bryan Blackburn bramson042@gmail.com</p>
 </footer>
 </body>
 </html>
