--- a/index.html
+++ b/index.html
@@ -8,20 +8,10 @@
     <link rel="icon" href="/32x32/female_left.png" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap"> 
 <body>    
-    <header>
-        <h1>Bryan Blackburn</h1>
-        <p>Javascript art, portrait art<p>
-        <p>Phoenix Arizona</p>
-        <p>bramson042@gmail.com</p>
-        <p>520-286-3225</p>
-    </header>
-    <div>
-        <!-- <h2 id="feat">Featured Artwork</h2> -->
-        <div class="gallery">
-            <img id="artwork0" src="/imgArt/Gandalf.jpeg" alt="Artwork 0">
-            <img id="artwork1" src="/imgArt/Gandalf.jpeg" alt="Artwork 1">
-        </div>
-    </div>    
+    <div class="gallery">
+    <img id="artwork0" src="/imgArt/Gandalf.jpeg" alt="Artwork 0">
+    <img id="artwork1" src="/imgArt/Gandalf.jpeg" alt="Artwork 1">
+    </div>
     <div id="imageContainer">
         <img src="/backgrounds/newback.png" id="stage" alt="stage"></img>
         <img src="/32x32/fireSheet.png" id= "fire" alt="fire"></img>
@@ -33,18 +23,18 @@
         <img src="/362x336/smoke.png" id="smoke" alt="smoke"></img>    
     </div>
     <div class="cedarville-cursive-text">
-        "Birds migrating,<br>
-        Ah—where they are headed,<br>
-        must be my homeland"
+    "Birds migrating,<br>
+    Ah—where they are headed,<br>
+    must be my homeland"
     </div>
     <div class="courier-text">
-        -Murakami 1938.
+    -Murakami 1938.
     </div>
     <canvas id="myCanvas"></canvas>
     <script src="game.js"></script>
 <footer>
-    <button id="mute" type="button">Arcade Beta Click to try</button>  
-    <p>Phoenix, AZ ©2024 Bryan Blackburn bramson042@gmail.com</p>
+    <button id="mute" class="mute">Arcade Beta Click to try</button>  
+    <p>Phoenix, AZ ©2024<br> Bryan Blackburn<br>bramson042@gmail.com</p>
 </footer>
 </body>
 </html>
