--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <canvas id="myCanvas"></canvas>
     <script src="game.js"></script>
 <footer>
-    <button id="mute" class="mute">Arcade Beta Click to try</button>  
+    <button id="mute" class="button1">Arcade Beta Click to try</button>  
     <p>Phoenix, AZ ©2024<br> Bryan Blackburn<br>bramson042@gmail.com</p>
 </footer>
 </body>
