--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4rt</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/32x32/female_left.png" type="image/x-icon">
+    <link rel="icon" href="32x32/G2.png" type="image/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap"> 
 <body>    
     <div class="gallery">
