--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
     </div>
     <canvas id="myCanvas"></canvas>
     <script src="game.js"></script>
-<footer>
     <button id="mute" class="button1">Arcade Beta Click to try</button>  
-    <p>Phoenix, AZ ©2024<br> Bryan Blackburn<br>bramson042@gmail.com</p>
+<footer id="footer">
+    <p>Bryan Blackburn<br>
+        bramson042@gmail.com<br>
+        Phoenix, AZ ©2024
+    </p>
 </footer>
 </body>
 </html>
