--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <canvas id="myCanvas"></canvas>
     <script src="game.js"></script>
-    <button id="mute" class="button1">Arcade Beta Click to try</button>  
+    <button id="mute" class="button1">Beta Click to try</button>  
 <footer id="footer">
     <p>Bryan Blackburn<br>
         bramson042@gmail.com<br>
