--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
     </div>
     <canvas id="myCanvas"></canvas>
     <script src="game.js"></script>
-    <button id="mute" class="button1">Arcade Beta Click to try</button>  
+    <div>
+
+    <button id="sound" class="button1">Sound on/off</button>  
+    <button id="mute" class="button1">Arcade Beta Click to try</button>
+  
+    </div>
 <footer id="footer">
     <p>Bryan Blackburn<br>
         bramson042@gmail.com<br>
