--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script src="game.js"></script>
     <div>
 
-    <button id="sound" class="button1">Sound on/off</button>  
+    <button id="sound" class="button1">Music on/off</button>  
     <button id="mute" class="button1">Arcade Beta Click to try</button>
   
     </div>
