--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div>
 
     <button id="sound" class="button1">Music on/off</button>  
-    <button id="mute" class="button1">Arcade Beta Click to try</button>
+    <button id="mute" class="button1">Arcade Beta</button>
   
     </div>
 <footer id="footer">
