--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="/cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
         <img src="/cats/hearts.png" id="hearts" alt="hearts"></img> 
         <img src="/32x32/thisfile.png" id="flower" alt="flower"></img>
-        <img src="/362x336/smoke.png" id="smoke" alt="smoke"></img>    
+        <img src="/32x32/musicIcon.png" id="musicIcon" alt="smoke"></img>    
     </div>
     <div class="cedarville-cursive-text">
     "Birds migrating,<br>
