--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <img src="/cats/hearts.png" id="hearts" alt="hearts"></img> 
         <img src="/32x32/thisfile.png" id="flower" alt="flower"></img>
         <img src="/32x32/musicIcon.png" id="musicIcon" alt="smoke"></img>
-        <img src="/32x32/Cloud.png" id="cloud" alt="cloud"></img>    
+        <img src="/32x32/Cloud.png" id="cloud" alt="cloud"></img>
+        <img src="/32x32/blue-whale.png" id="whale" alt="whale"></img>    
     </div>
     <div class="cedarville-cursive-text">
     "Birds migrating,<br>
