--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <img src="/32x32/thisfile.png" id="flower" alt="flower"></img>
         <img src="/32x32/musicIcon.png" id="musicIcon" alt="smoke"></img>
         <img src="/32x32/Cloud.png" id="cloud" alt="cloud"></img>
-        <img src="/32x32/blue-whale.png" id="whale" alt="whale"></img>    
+        <img src="/32x32/blue-whale.png" id="whale" alt="whale"></img>
+        <img src="/backgrounds/grassSheet.png" id="grass" alt="grass">    
     </div>
     <div class="cedarville-cursive-text">
     "Birds migrating,<br>
