--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <img src="/32x32/thisfile.png" id="flower" alt="flower"></img>
         <img src="/32x32/Cloud.png" id="cloud" alt="cloud"></img>
         <img src="/32x32/blue-whale.png" id="whale" alt="whale"></img>
-        <img src="/backgrounds/grassSheet.png" id="grass" alt="grass">    
+        <img src="/backgrounds/grassSheet.png" id="grass" alt="grass"></img>
+        <img src="/108x88/fireShadow.png" id="fireShadow" alt="fireShadow"></img>
+            
     </div>
     <div class="cedarville-cursive-text">
     "Birds migrating,<br>
