--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="icon" href="32x32/G2.png" type="image/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap"> 
 <body>    
-    <div class="gallery">
-    <img id="artwork0" src="/imgArt/Gandalf.jpeg" alt="Artwork 0">
-    <img id="artwork1" src="/imgArt/Gandalf.jpeg" alt="Artwork 1">
+
+    <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="img01">
     </div>
     <div id="imageContainer">
         <img src="/backgrounds/newback.png" id="stage" alt="stage"></img>
@@ -40,8 +41,13 @@
 
     <button id="sound" class="button1">Music on/off</button>  
     <button id="mute" class="button1">Arcade Beta</button>
-  
     </div>
+    <div class="gallery">
+        <img id="artwork0" src="/imgArt/Gandalf.jpeg" alt="Artwork 0">
+        <img id="artwork1" src="/imgArt/RFeyn.jpg" alt="Artwork 1">
+        <img id="artwork3" src="/imgArt/d1.jpg" alt="Artwork 2">
+    </div>
+
 <footer id="footer">
     <p>Bryan Blackburn<br>
         bramson042@gmail.com<br>
