--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
     <div class="courier-text">
     -Murakami 1938.
     </div>
+    
     <canvas id="myCanvas"></canvas>
     <script src="game.js"></script>
+    
     <div>
-
     <button id="sound" class="button1">Music on/off</button>  
     <button id="mute" class="button1">Arcade Beta</button>
     </div>
+    <div id="galText">Recent Artwork</div>
     <div class="gallery">
         <img id="artwork0" src="/imgArt/Gandalf.jpeg" alt="Artwork 0">
         <img id="artwork1" src="/imgArt/RFeyn.jpg" alt="Artwork 1">
